cs225/grade-reports/exam-2/test-hard-04.txt
CD to .. 
/home/mattox/repos/cs225/fa16-exam2-grading/submissions/nlyu2
###############################
##                           ##
##     Grading question      ##
##                           ##
###############################
Grader dir is /home/mattox/repos/cs225/fa16-exam2-grading/code-grading/scripts
qid is hard-04
variant is
test_dir is /home/mattox/repos/cs225/fa16-exam2-grading/code-grading/scripts/tests/hard-04/
fullTmpDir = /home/mattox/repos/cs225/fa16-exam2-grading/submissions/nlyu2/grade-.p5s
:: Compiling...
g++ -std=c++0x -c -g -O0 -Wall -Wextra -Wno-unused-function   -c -o hard.o hard.cpp
hard.cpp: In function ‘void intersection(LinkedList*, LinkedList*, LinkedList&)’:
hard.cpp:7:14: error: declaration of ‘LinkedList* lst2’ shadows a parameter
  LinkedList* lst2,
              ^~~~
hard.cpp:8:23: error: expected initializer before ‘&’ token
            LinkedList &intersect){
                       ^
hard.cpp:7:14: warning: unused variable ‘lst2’ [-Wunused-variable]
  LinkedList* lst2,
              ^~~~
hard.cpp:33:1: error: expected ‘}’ at end of input
 }
 ^
hard.cpp:3:31: warning: unused parameter ‘lst1’ [-Wunused-parameter]
 void intersection(LinkedList* lst1,
                               ^~~~
hard.cpp:4:24: warning: unused parameter ‘lst2’ [-Wunused-parameter]
            LinkedList* lst2,
                        ^~~~
hard.cpp:5:24: warning: unused parameter ‘intersect’ [-Wunused-parameter]
            LinkedList &intersect)
                        ^~~~~~~~~
<builtin>: recipe for target 'hard.o' failed
make: *** [hard.o] Error 1
Could not compile hard.o.

Grade for question : 0/100


~ ~ ~

Grade: 0

Details:
test,grade
_compiled,0
